--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/_Imports.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using BlazorSeguridad2026.Client
 @using BlazorSeguridad2026.Components
 @using BlazorSeguridad2026.Components.Layout
+@using WebErrorBoundary = Microsoft.AspNetCore.Components.Web.ErrorBoundary
