--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/UserRoles.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/UserRoles.razor
@@ -6,7 +6,7 @@
 @* @attribute [Authorize(Roles = "Admin")] *@
 
 @inject IUserService UserService
-@inject RoleManager<IdentityRole> RoleManager
+@inject RoleManager<ApplicationRole> RoleManager
 @inject NavigationManager Nav
 
 <h3>Asignar roles al usuario</h3>
@@ -77,10 +77,10 @@ else
 }
 
 @code {
-    [Parameter] public string UserId { get; set; } = string.Empty;
+    [Parameter] public int UserId { get; set; } 
 
     private ApplicationUser? user;
-    private List<IdentityRole> allRoles = new();
+    private List<ApplicationRole> allRoles = new();
     private HashSet<string> selectedRoles = new(StringComparer.OrdinalIgnoreCase);
 
     private bool isLoading = true;
