--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/UserRoles.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/UserRoles.razor
@@ -77,7 +77,7 @@ else
 }
 
 @code {
-    [Parameter] public int UserId { get; set; } 
+    [Parameter] public string UserId { get; set; } 
 
     private ApplicationUser? user;
     private List<ApplicationRole> allRoles = new();
@@ -91,8 +91,9 @@ else
     {
         isLoading = true;
         error = success = null;
+        int userId = int.Parse(UserId);
 
-        user = await UserService.GetByIdAsync(UserId);
+        user = await UserService.GetByIdAsync(userId);
         if (user is null)
         {
             isLoading = false;
@@ -105,7 +106,8 @@ else
             .ToList();
 
         // roles actuales del usuario
-        var userRoles = await UserService.GetUserRolesAsync(UserId);
+     
+        var userRoles = await UserService.GetUserRolesAsync(userId);
         selectedRoles = new HashSet<string>(userRoles, StringComparer.OrdinalIgnoreCase);
 
         isLoading = false;
