--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/Users.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/Users.razor
@@ -108,7 +108,7 @@
                         else
                         {
                             <button class="btn btn-sm btn-outline-info me-1"
-                                    @onclick="@(() => Nav.NavigateTo($"/users/{u.Id}/roles"))">
+                                    @onclick="@(() => Nav.NavigateTo($"/users/{u.Id.ToString()}/roles"))">
                                 Roles
                             </button>
                             <button class="btn btn-sm btn-outline-primary me-1"
