--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/Roles.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/Roles.razor
@@ -7,6 +7,7 @@
 
 @inject IRoleService RoleService
 @inject NavigationManager Nav
+@inject UserManager<ApplicationRole> RoleManager
 
 <h3>Roles</h3>
 
