--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
@@ -3,7 +3,7 @@
 
 @using Microsoft.AspNetCore.Authorization
 @using Shares.Genericos
-@using Shares.Modelo
+@using BlazorSeguridad2026.Data
 @using Shares.Seguridad
 @using Shares.Servicios
 
