--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/ListaUsuarios.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/ListaUsuarios.razor
@@ -2,7 +2,7 @@
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 
 @using Shares.Genericos
-@using Shares.Modelo
+@using BlazorSeguridad2026.Data
 @using Shares.Seguridad
 @using Shares.Servicios
 @inject IUnitOfWorkFactory UnitOfWorkFactory 
