--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/PaginaRoles.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/PaginaRoles.razor
@@ -2,6 +2,7 @@
 @using BlazorSeguridad2026.Data
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
+@using BlazorSeguridad2026.Data
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @* @attribute [Authorize(Roles = "Admin")] *@
 
