--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/PaginaUsers.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/PaginaUsers.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Identity
 @using BlazorSeguridad2026.Data
 @using Shares.Genericos
-@using Shares.Modelo
+@using BlazorSeguridad2026.Data
 @using Shares.Seguridad
 @using Shares.Servicios
 @inject IUnitOfWorkFactory UnitOfWorkFactory
