--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/PaginaRoles.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Seguridad/PaginaRoles.razor
@@ -197,15 +197,28 @@
 
     private NewRoleModel newRoleModel = new();
 
+
+    private Action? _onContextChangedHandler;
+
     protected override async Task OnInitializedAsync()
     {
-        await LoadRolesAsync();
+        _onContextChangedHandler += async () =>
+        {
+            await LoadRolesAsync();
+
+        };
+
+
+        ContextProvider.OnContextChanged += _onContextChangedHandler;
     }
 
-    private async Task LoadRole2sAsync()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        roles = await RoleServiceMio.GetAllAsync();
+        if (firstRender)
+            await LoadRolesAsync();
+
     }
+
     private async Task LoadRolesAsync()
     {
         try
@@ -219,8 +232,8 @@
                 var list = await user.GetAllAsync();
                 if (list is null) return;
                 roles = list.ToList();
-                newRoleModel.TenantId = cp._AppState.TenantId ?? 0;
-                newRoleModel.DbKey = cp._AppState.DbKey;
+                newRoleModel.TenantId = ContextProvider._AppState.TenantId ?? 0;
+                newRoleModel.DbKey = ContextProvider._AppState.DbKey;
                 _isValidContext = true;
             }
             else _isValidContext = false;
@@ -258,7 +271,7 @@
 
         error = success = null;
 
-        var result = await RoleServiceMio.UpdateRoleAsync(editingRoleId, editRoleName,editTenantId, editDbKey);
+        var result = await RoleServiceMio.UpdateRoleAsync(editingRoleId, editRoleName);
 
         if (result.Succeeded)
         {
@@ -283,7 +296,7 @@
             return;
         }
 
-        var result = await RoleServiceMio.CreateAsync(newRoleModel.Name,newRoleModel.TenantId,newRoleModel.DbKey);
+        var result = await RoleServiceMio.CreateAsync(newRoleModel.Name);
 
         if (result.Succeeded)
         {
@@ -311,5 +324,11 @@
         {
             error = string.Join(" ", result.Errors.Select(e => e.Description));
         }
+    }
+    private void Dispose()
+    {
+
+        ContextProvider.OnContextChanged -= _onContextChangedHandler;
+
     }
 }
