parece que funcinan con componentes pero no con páginas !!

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/_Imports.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorSeguridad2026.Client
+@using BlazorSeguridad2026.Data.Seguridad
