--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/Seguridad/ComponenteUserRoles.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/Seguridad/ComponenteUserRoles.razor
@@ -1,6 +1,8 @@
-﻿@page "/users/{UserId}/roles"
+﻿@* @page "/seguridad/users/{UserId}/roles" *@
+@namespace BlazorSeguridad2026.Data.Seguridad
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
+@using BlazorSeguridad2026.Components.Seguridad
 
 @using BlazorSeguridad2026.Data
 @using Shares.Seguridad
