--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/_Imports.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/_Imports.razor
@@ -11,4 +11,5 @@
 @using BlazorSeguridad2026.Client
 @using BlazorSeguridad2026.Components
 @using BlazorSeguridad2026.Components.Layout
+@using BlazorSeguridad2026.Data.Seguridad
 @using BlazorSeguridad2026.Data
