--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/_Imports.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/_Imports.razor
@@ -1,1 +1,13 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using System.Net.Http
+@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
+@using BlazorSeguridad2026
+@using BlazorSeguridad2026.Data.Seguridad
+@using BlazorSeguridad2026.Components
+@using BlazorSeguridad2026.Data
