--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/MainLayout.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using BlazorSeguridad2026.Data.Seguridad
 
 <div class="page">
     <div class="sidebar">
@@ -16,6 +17,7 @@
 
         <article class="content px-4">
             @Body
+            <BlazorSeguridad2026.Data.Seguridad.MarcaRc1/>
         </article>
 
 
@@ -27,3 +29,4 @@
     <a href="." class="reload">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
+<BlazorSeguridad2026.Data.Seguridad.MarcaRc1 />
