--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
@@ -40,12 +40,12 @@
     @if (adminMenuExpanded)
     {
         <div class="nav-item px-4">
-            <NavLink class="nav-link" href="/users">
+            <NavLink class="nav-link" href="/seguridad/users">
                 <span class="oi oi-people" aria-hidden="true"></span>
                 Usuarios
             </NavLink>
 
-            <NavLink class="nav-link" href="/roles">
+            <NavLink class="nav-link" href="roles">
                 <span class="oi oi-key" aria-hidden="true"></span>
                 Roles
             </NavLink>
@@ -105,6 +105,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="ListaUsuarios">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista Usuarios
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ListaUsuariosCliente">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista U(Api)
             </NavLink>
         </div>
 
